--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
+    "canvas-confetti": "^1.9.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.11.8",
+    "lucide-react": "^0.451.0",
     "myapp": "file:",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
@@ -16,7 +21,10 @@
     "react-slick": "^0.30.2",
     "reactstrap": "^9.2.2",
     "remixicon": "^4.3.0",
+    "shadcn-ui": "^0.9.2",
     "slick-carousel": "^1.8.1",
+    "tailwind-merge": "^2.5.3",
+    "tailwindcss-animate": "^1.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
